<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="30dp"
            android:padding="20dp"
            android:background="@drawable/linearlayout_background">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DeseaseConnectionTittle"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AboutDiseaseConnection"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/tvReadMoreDiabetes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ReadMoreAboutDiabetes"
                android:textSize="17sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvReadMoreSleep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ReadMoreAboutProblemsWithSleep"
                android:textSize="17sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_below="@id/tvMorningFeel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_bottomborder"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/FreeStyleLibreTittle"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:layout_marginBottom="15dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="20dp"
                android:src="@drawable/freestyle_libre" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AboutFreeStyleLibre"
                android:textSize="17sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>