<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dis_icon"
            android:padding="30dp"
            android:layout_gravity="center" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/linearlayout_background"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/ResetPasswordDescription"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:id="@+id/etSendEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/Email"
                android:textColor="@color/black"
                android:background="@drawable/edittext_background"
                android:padding="20dp"
                android:layout_marginBottom="10dp"/>


            <android.widget.Button
                android:id="@+id/bSendEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/SendEmail"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:onClick="sendEmail"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BackToLogIn"
                android:gravity="center"
                android:textStyle="bold"
                android:onClick="backToLogIn"
                />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>